--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,49 @@
-dash==0.21.1
+attrs==19.3.0
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+cycler==0.10.0
+dash==1.9.1
 dash-auth==0.0.10
-dash-core-components==0.23.0
-dash-html-components==0.11.0
-dash-renderer==0.13.0
+dash-bootstrap-components==0.8.3
+dash-core-components==1.8.1
+dash-daq==0.4.0
+dash-html-components==1.0.2
+dash-renderer==1.2.4
+dash-table==4.6.1
+decorator==4.4.2
+Flask==1.1.1
+Flask-Compress==1.4.0
+Flask-SeaSurf==0.2.2
+future==0.18.2
 gunicorn==19.9.0
+idna==2.5
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
+jsonschema==3.2.0
+jupyter-core==4.6.3
+kiwisolver==1.1.0
 lorem==0.1.1
-numpy==1.14.3
+MarkupSafe==1.1.1
+matplotlib==3.2.0
+nbformat==5.0.4
+numpy==1.18.1
+olefile==0.46
+Pillow==7.0.0
 plotly==2.2.3
 PyLyrics==1.1.0
+pyparsing==2.4.6
+pyrsistent==0.15.7
+python-dateutil==2.8.1
+pytz==2019.3
 requests==2.18.1
+six==1.14.0
+soupsieve==2.0
+tornado==6.0.4
+traitlets==4.3.3
+urllib3==1.21.1
+Werkzeug==1.0.0
 wikipedia==1.4.0
-wordcloud==1.4.1
-
+wordcloud==1.6.0
